# ASL-Translate-GPT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  test.txt
src/: ChatGPTClient.cpp  ChatGPTClient.h  InferenceYolov8.cpp  InferenceYolov8.h  languageTranslate.cpp  languageTranslate.h
tests/: gptTest.cpp  translateTest.cpp
